# humanatee

./: Dockerfile  README.md  pyproject.toml
docs/: install.md  trgt_interpretation.md  trgt_tutorial.md
resources/: puretarget.hg38.annotations.tsv  trgt.pathogenic_repeats.hg38.annotations.tsv
src/humanatee/: __init__.py  __main__.py  dbutils.py  refanno.py  trgt.py  trgtplots.py  trgtpop.py  utils.py  vcf2db.py
src/humanatee/data/: ensembl_consequences.tsv  trgt_columns.tsv
src/humanatee/schemas/: consequence.sql  trgtpop.sql  variant.sql  vcf.sql
tests/: __init__.py  test_refanno.py  test_trgt.py  test_trgtplots.py  test_trgtpop.py  test_utils.py
tests/test_data/: annotation.bed  clinvar_gene_desc.txt  oelof.lookup  phrank.tsv  pli.lookup  trgt.denovo.duo.tsv  trgt.denovo.trio.tsv  trgt.dropouts.tsv  trgt.hprc.hg.db  trgt.hprc.hg.refanno.db  trgt.hprc.hg.sorted.vcf  trgt.hprc.hg.vcf  trgt.hprc.na.db  trgt.hprc.na.vcf  trgt.hprc.vcf  trgt.pathogenic.tsv  trgt.sorted.vcf  trgt.vcf
